Assignment-2/MyParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MyParser.java */
  import java.util.*;

  public class MyParser/*@bgen(jjtree)*/implements MyParserTreeConstants, MyParserConstants {/*@bgen(jjtree)*/
  protected static JJTMyParserState jjtree = new JJTMyParserState();public static STC ST = new STC();
    public static String scope = "global";

    public static Hashtable ht = new Hashtable();

    public static void main(String args[]) {
      MyParser tokeniser;

      if (args.length == 0) {
        System.out.println("Reading from standard input...");
        tokeniser = new MyParser(System.in);
      }
      else if (args.length == 1) {
        try {
          tokeniser = new MyParser(new java.io.FileInputStream(args[0]));
        }
        catch (java.io.FileNotFoundException e) {
          System.err.printf("File %s not found.\u005cn", args[0]);
          return;
        }
      }
      else {
        System.out.println("MyParser: Usage is one of:");
        System.out.println("      java MyParser < inputfile");
        System.out.println("OR");
        System.out.println("      java MyParser inputfile");
        return;
      }
      try {
        SimpleNode root = tokeniser.Program();
        System.out.println("\u005cn                ************************\u005cn                * Abstract Syntax Tree *\u005cn                ************************\u005cn");
        root.dump("");

        System.out.print("\u005cn                   ****************\u005cn                   * Symbol Table *\u005cn                   ****************\u005cn\u005cn");
        ST.print();

        TypeCheckVisitor tcv = new TypeCheckVisitor();
        System.out.println("\u005cn                *********************\u005cn                * Semantic Analysis *\u005cn                *********************\u005cn");
        root.jjtAccept(tcv, ht);

        ThreeAddressCode taci = new ThreeAddressCode();
        System.out.println("\u005cn               **********************\u005cn               * Three Address Code *\u005cn               **********************");
        System.out.println("  -> Also Outputted to file: ThreeAddressCode.ir <-\u005cn");
        root.jjtAccept(taci, null);
                  }
                catch (ParseException e) {
        System.out.println("Encountered errors during parsing.");
        e.printStackTrace();
                        //System.out.println(e.getMessage());
                }
    }

/***********************************
***** SECTION 4 - THE GRAMMAR *****
***********************************/
  static final public SimpleNode Program() throws ParseException {
                                 /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclList();
      FunctionList();
      Main();
      jj_consume_token(0);
                                             jjtree.closeNodeScope(jjtn000, true);
                                             jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void DeclList() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
      case CONSTANT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Decl();
    }
  }

  static final public void Decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      VarDecl();
      break;
    case CONSTANT:
      ConstDecl();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(SEMICOL);
  }

  static final public void VarDecl() throws ParseException {
                                       /*@bgen(jjtree) VariableDeclaration */
                                       ASTVariableDeclaration jjtn000 = new ASTVariableDeclaration(JJTVARIABLEDECLARATION);
                                       boolean jjtc000 = true;
                                       jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VARIABLE);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
                                                             jjtree.closeNodeScope(jjtn000, true);
                                                             jjtc000 = false;
      jjtn000.value = t.image;
      ST.put(id, type, "variable", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ConstDecl() throws ParseException {
                                         /*@bgen(jjtree) ConstantDeclaration */
                                         ASTConstantDeclaration jjtn000 = new ASTConstantDeclaration(JJTCONSTANTDECLARATION);
                                         boolean jjtc000 = true;
                                         jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONSTANT);
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
      ConstantAssign();
                                                                              jjtree.closeNodeScope(jjtn000, true);
                                                                              jjtc000 = false;
      ST.put(id, type, "constant", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ConstantAssign() throws ParseException {
                         Token t;
    t = jj_consume_token(ASSIGN);
    Expression();
                                ASTConstantAssign jjtn001 = new ASTConstantAssign(JJTCONSTANTASSIGN);
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
    try {
                                jjtree.closeNodeScope(jjtn001,  1);
                                jjtc001 = false;
      jjtn001.value = t.image;
    } finally {
                                if (jjtc001) {
                                  jjtree.closeNodeScope(jjtn001,  1);
                                }
    }
  }

  static final public void FunctionList() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case VOID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      Function();
    }
  }

  static final public void Function() throws ParseException {
                             /*@bgen(jjtree) Function */
                             ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);Token t; String type; String id;
    try {
      type = Type();
      id = Identifier();
      jjtn000.value = id;
      scope = id;
      ST.put(id, type, "function", scope);
      jj_consume_token(L_BRACK);
      ParameterList();
      jj_consume_token(R_BRACK);
      jj_consume_token(IS);
      DeclList();
      jj_consume_token(BEGIN);
      StatementBlock();
      jj_consume_token(RETURN);
      jj_consume_token(L_BRACK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case L_BRACK:
      case MINUS:
      case NUM:
      case ID:
        Expression();
        break;
      default:
        jj_la1[3] = jj_gen;

      }
      jj_consume_token(R_BRACK);
                                                       ASTFunctionReturn jjtn001 = new ASTFunctionReturn(JJTFUNCTIONRETURN);
                                                       boolean jjtc001 = true;
                                                       jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(SEMICOL);
      } finally {
                                                       if (jjtc001) {
                                                         jjtree.closeNodeScope(jjtn001,  1);
                                                       }
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public String Type() throws ParseException {
                       /*@bgen(jjtree) Type */
                       ASTType jjtn000 = new ASTType(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        t = jj_consume_token(INTEGER);
        break;
      case BOOLEAN:
        t = jj_consume_token(BOOLEAN);
        break;
      case VOID:
        t = jj_consume_token(VOID);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                 jjtree.closeNodeScope(jjtn000, true);
                                                 jjtc000 = false;
    jjtn000.value = t.image;
    {if (true) return t.image;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ParameterList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      NempParameterList();
      NempParameterListPrime();
      break;
    default:
      jj_la1[5] = jj_gen;

    }
  }

  static final public void NempParameterList() throws ParseException {
                                           /*@bgen(jjtree) ParameterList */
                                           ASTParameterList jjtn000 = new ASTParameterList(JJTPARAMETERLIST);
                                           boolean jjtc000 = true;
                                           jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      id = Identifier();
      jj_consume_token(COLON);
      type = Type();
                                              jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
      ST.put(id, type, "parameter", scope);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void NempParameterListPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      NempParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;

    }
  }

  static final public void Main() throws ParseException {
                     /*@bgen(jjtree) Main */
                     ASTMain jjtn000 = new ASTMain(JJTMAIN);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
     scope = "main";
      t = jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      DeclList();
      StatementBlock();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void StatementBlock() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case BEGIN:
      case SKIPPY:
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      Statement();
    }
  }

  static final public void Statement() throws ParseException {
                               /*@bgen(jjtree) Statement */
                               ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Identifier();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          t = jj_consume_token(ASSIGN);
          Expression();
          jj_consume_token(SEMICOL);
                                                         jjtree.closeNodeScope(jjtn000, true);
                                                         jjtc000 = false;
      jjtn000.value = t.image;
          break;
        case L_BRACK:
          t = jj_consume_token(L_BRACK);
          ArgList();
          jj_consume_token(R_BRACK);
          jj_consume_token(SEMICOL);
                                                    jjtree.closeNodeScope(jjtn000, true);
                                                    jjtc000 = false;
      jjtn000.value = "Process_Call";
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case BEGIN:
        t = jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
      jjtn000.value = t.image;
        break;
      case IF:
        t = jj_consume_token(IF);
        Condition();
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
        jj_consume_token(ELSE);
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
                                                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                                                 jjtc000 = false;
      jjtn000.value = t.image;
        break;
      case WHILE:
        t = jj_consume_token(WHILE);
        Condition();
        jj_consume_token(BEGIN);
        StatementBlock();
        jj_consume_token(END);
                                                              jjtree.closeNodeScope(jjtn000, true);
                                                              jjtc000 = false;
      jjtn000.value = t.image;
        break;
      case SKIPPY:
        jj_consume_token(SKIPPY);
        jj_consume_token(SEMICOL);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case MINUS:
    case NUM:
    case ID:
      Fragment();
      BinaryArithOp();
      break;
    case L_BRACK:
      jj_consume_token(L_BRACK);
      Expression();
      jj_consume_token(R_BRACK);
      BinaryArithOp();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void BinaryArithOp() throws ParseException {
                        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      ASTPlusOperator jjtn001 = new ASTPlusOperator(JJTPLUSOPERATOR);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        t = jj_consume_token(PLUS);
        Expression();
                               jjtree.closeNodeScope(jjtn001,  2);
                               jjtc001 = false;
      jjtn001.value = t.image;
      } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001,  2);
      }
      }
      break;
    case MINUS:
      ASTMinusOperator jjtn002 = new ASTMinusOperator(JJTMINUSOPERATOR);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      try {
        t = jj_consume_token(MINUS);
        Expression();
                                jjtree.closeNodeScope(jjtn002,  2);
                                jjtc002 = false;
      jjtn002.value = t.image;
      } catch (Throwable jjte002) {
      if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
      } finally {
      if (jjtc002) {
        jjtree.closeNodeScope(jjtn002,  2);
      }
      }
      break;
    default:
      jj_la1[11] = jj_gen;

    }
  }

  static final public void Fragment() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      Identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case L_BRACK:
        jj_consume_token(L_BRACK);
        ArgList();
        jj_consume_token(R_BRACK);
        break;
      default:
        jj_la1[13] = jj_gen;

      }
      break;
    case NUM:
      Number();
      break;
    case TRUE:
    case FALSE:
      Boolean();
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Condition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BITNOT:
      jj_consume_token(BITNOT);
      Condition();
      ConditionPrime();
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_1(3)) {
        jj_consume_token(L_BRACK);
        Condition();
        jj_consume_token(R_BRACK);
        ConditionPrime();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TRUE:
        case FALSE:
        case L_BRACK:
        case MINUS:
        case NUM:
        case ID:
          Expression();
          CompOp();
          ConditionPrime();
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void ConditionPrime() throws ParseException {
                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BITOR:
      ASTBitOrOperator jjtn001 = new ASTBitOrOperator(JJTBITOROPERATOR);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        t = jj_consume_token(BITOR);
        Condition();
        ConditionPrime();
                                                jjtree.closeNodeScope(jjtn001,  2);
                                                jjtc001 = false;
      jjtn001.value = t.image;
      } catch (Throwable jjte001) {
      if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
      } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001,  2);
      }
      }
      break;
    case BITAND:
      ASTBitAndOperator jjtn002 = new ASTBitAndOperator(JJTBITANDOPERATOR);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      try {
        t = jj_consume_token(BITAND);
        Condition();
        ConditionPrime();
                                                 jjtree.closeNodeScope(jjtn002,  2);
                                                 jjtc002 = false;
      jjtn002.value = t.image;
      } catch (Throwable jjte002) {
      if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
      } finally {
      if (jjtc002) {
        jjtree.closeNodeScope(jjtn002,  2);
      }
      }
      break;
    default:
      jj_la1[17] = jj_gen;

    }
  }
